BaSP-TG-102: fixed contrast colors

--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -9,7 +9,7 @@
   position: fixed;
   width: 100%;
   height: 70px;
-  background-color: #707070;
+  background-color: #8A8A8A;
 }
 
 .brand {
