--- a/src/Components/Home/home.module.css
+++ b/src/Components/Home/home.module.css
@@ -9,6 +9,7 @@
 }
 
 .tittle {
+  margin: 0 0 0 10px;
   font-family: 'Roboto', sans-serif;
   font-size: 70px;
   color: #373867;
@@ -17,26 +18,81 @@
 .homeContent{
   display: flex;
 }
+
+.homeIco {
+  height: 300px;
+}
+
 .homeh3 {
-  margin: 68px 0 0 50px;
+  margin: 68px 0 0 65px;
   font-family: 'Roboto', sans-serif;
   font-size: 50px;
   font-weight: 100;
   color: #373867;
-
-
 }
 
 .homeP {
-  margin: 0 0 15px 38px;
+  margin: 0 0 15px 65px;
   font-family: 'Roboto', sans-serif;
-  font-size: 45px;
+  font-size: 35px;
   font-weight: 100;
   color: #37386763;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1024px) {
+  .homeContent {
+    align-items: center;
+  }
   .tittle {
     text-align: center;
+    font-size: 65px;
+  }
+  .homeh3 {
+    margin: 0 0 0 31px;
+  }
+  .homeIco {
+    height: 320px;
+  }
+  .homeP {
+    font-size: 25px;
+    margin: 0 0 0 31px;
+  }
+}
+
+@media (max-width: 700px) {
+  .homeh3 {
+    margin: 0 0 0 37px;
+    font-size: 35px;
+  }
+  .homeContent {
+    align-items: center;
+  }
+  .tittle {
+    text-align: center;
+  }
+  .homeIco {
+    height: 210px;
+  }
+  .homeP {
+    font-size: 25px;
+  }
+}
+@media (max-width: 480px) {
+  .tittle {
+    font-size: 55px;
+  }
+  .homeh3 {
+    margin: 36px 0 0 40px;
+    font-size: 25px;
+  }
+  .homeContent {
+    align-items: center;
+  }
+  .homeIco {
+    height: 200px;
+  }
+  .homeP {
+    font-size: 15px;
+    margin: 0 0 15px 42px;
   }
 }
