--- a/src/Components/Shared/ButtonsOption/buttonsOption.module.css
+++ b/src/Components/Shared/ButtonsOption/buttonsOption.module.css
@@ -5,6 +5,7 @@
     border-radius: 3px;
     margin: 1rem;
     background-color: #AACE9B;
+    font-weight: bold;
 }
 
 .buttonNo {
@@ -14,4 +15,5 @@
     border-radius: 3px;
     margin: 1rem;
     background-color: #A2A3A6;
+    font-weight: bold;
     }
