--- a/src/Components/Shared/Input/input.module.css
+++ b/src/Components/Shared/Input/input.module.css
@@ -23,7 +23,7 @@
 }
 
 .inputError {
-  border: 1px solid #ff0000;
+  border: 1px solid #E60000;
 }
 input:last-of-type {
   margin-bottom: 1rem;
